# MTGRandomQuote

./: LICENSE.md  README.md  pyproject.toml
src/MTGRandomQuote/: flavor.sqlite  main.py
